kubernetes/apps/observability/kube-prometheus-stack/app/gateway.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kube-prometheus-gateway
  namespace: observability
  annotations:
    cert-manager.io/cluster-issuer: gts-production
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/private-key-size: "384"
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.120.114
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "prometheus.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: http-alertmanager
      protocol: HTTP
      port: 80
      hostname: "alertmanager.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "prometheus.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: prometheus-tls
    - name: https-atuin
      protocol: HTTPS
      port: 443
      hostname: "alertmanager.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: prometheus-tls
